# openenclave

./: CMakeLists.txt  bors.toml
api/: annotated.html  classes.html  deprecated.html  dir_4cb89d43f92538ff4356f1c340b21854.html  enclave_8h.html  enclave_8h__incl.map  enclave_8h__incl.md5  enclave_8h_a006169e35b8b5eeb840dbca52490b010.html  enclave_8h_a10b3ff4164db3852c41fa431950bebb3.html  enclave_8h_a2816745c2f67233b6b95ef69155cc378.html  enclave_8h_a2bbc7ed6f89a7962395753edfd342164.html  enclave_8h_a2c58ec0106bad1b48f7c6a739357adc9.html  enclave_8h_a331e99dcf906a0e8e4747cdab1328efd.html  enclave_8h_a3401b750937f12b6b9f3911b5a39304f.html  enclave_8h_a49a8df764b9a46fbe7bcd092e2417277.html  enclave_8h_a4a6f218a37d256fdda8e5912f40c9dd9.html  enclave_8h_a4cdf1003ae4d6b0d56795cbe136fb9fb.html  enclave_8h_a52dcf6d04ef924555061caa168c59ce9.html  enclave_8h_a531e85a911baf1138c1e670755108657.html  enclave_8h_a55a7639aba6df88ba6b1a0adcba7c581.html  enclave_8h_a5827825ee8dec2b3f725db3fd35adc9a.html  enclave_8h_a63fd9cb689eadff33a3654bbc4b4fa57.html  enclave_8h_a6612be80073caa74285acc6b0279170f.html  enclave_8h_a678f50056e99b7882724358b0c7b6421.html  enclave_8h_a682a11d6ff6534266fb9eb1a76bcfe26.html  enclave_8h_a74aebc5490b8922fc5cd69d1cc4994a5.html  enclave_8h_a84aa2783b0d66e8593507e028c3dc1c0.html  enclave_8h_a899860cea8ec39af36e76c73087b48c1.html  enclave_8h_a9134dc1de1670fd82c478a04b3c7a66f.html  enclave_8h_a95f050e146ca454664cd0283e130397d.html  enclave_8h_a9d81dc0e53ca0ddbaf6d941bfcd1ab93.html  enclave_8h_aa9a01301f36e483bb4fb9ba1a35dad5a.html  enclave_8h_ab7977cbd56716f8839315932d5f0f280.html  enclave_8h_ab9468d8c3221f1c015d238e233010ef7.html  enclave_8h_acd119f88c4005f9c130f6f78b9ae43e0.html  enclave_8h_acf4c88b0acdad58f3983875139d130d7.html  enclave_8h_ad53c251dcc2d044d0edef00ed315e7f2.html  enclave_8h_adb1efb2eabdc5ad3c47947eb9ede5cd3.html  enclave_8h_ade4a447c9926233f38c961fa8fc9c831.html  enclave_8h_ade70955979f02fc1f0dd8fd34f51f5ff.html  (+82 more)
api/search/: all_0.js  all_a.js  all_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_1.js  searchdata.js  typedefs_0.js
build_tools/: CMakeLists.txt  clang_wrapper.cpp
cc/: build.bat  oear.cpp  oecc.cpp  oeld.cpp
cmake/: add_enclave.cmake  add_enclave_executable.cmake  add_enclave_test.cmake  make_portable.cmake
common/sgx/: eeid.c  qeidentity.c  quote.c  revocation.c  sgxcertextensions.c  tcbinfo.c
docs/DesignDocs/: ExtendedEnclaveInitializationData.md
enclave/: CMakeLists.txt  asym_keys.c  cert.c  report.c  start.S  tls.c  tlsverifiere.c
enclave/core/: CMakeLists.txt  globals.c  properties.c
enclave/core/sgx/: calls.c  enter.S  exit.S  init.c  malloc.c  td.c
host/: CMakeLists.txt  loadelf.c  traceh.c
host/linux/: exception.c
host/sgx/: create.c  elf.c  enclave.h  loadelf.c  loadpe.c  ocalls.c  sgxload.c  sgxquoteprovider.c  tlsverifierh.c
host/sgx/linux/: sgxquoteprovider.c  sgxquoteproviderloader.c
host/sgx/windows/: sgxquoteproviderloader.c
include/openenclave/: enclave.h  host.h  socket.edl
include/openenclave/bits/: eeid.h  socket.h  sockettypes.h  types.h
include/openenclave/elibc/: endian.h  string.h
include/openenclave/internal/: calls.h  eeid.h
libc/: CMakeLists.txt  strerror.c
libcxx/: CMakeLists.txt
libsocket/enc/: socket_enc.c
libsocket/host/linux/: socket_host.c
samples/host_verify/: CMakeLists.txt  host.c
samples/tls_with_attestation/: Makefile
samples/tls_with_attestation/client/: Makefile  tls_client.edl
samples/tls_with_attestation/common/: utility.cpp  utility.h
samples/tls_with_attestation/server/: tls_server.edl
scripts/: check-license
scripts/ansible/: deploy_jenkins.yml  deploy_vanilla.yml  deploy_vanilla_to_presgx_state.yml
scripts/ansible/tasks/: ansible-install-openenclave-package.yml
tests/: CMakeLists.txt
tests/SampleApp/: CMakeLists.txt
tests/SampleApp/SampleApp/: CMakeLists.txt
tests/SampleAppCRT/: CMakeLists.txt
tests/SampleAppCRT/SampleAppCRT/: CMakeLists.txt
tests/SampleAppCRT/enc/: CMakeLists.txt
tests/abortStatus/: CMakeLists.txt
tests/cppException/: CMakeLists.txt
tests/create-rapid/: CMakeLists.txt
tests/debug-mode/: CMakeLists.txt
tests/ecall/: CMakeLists.txt
tests/ecall_ocall/: CMakeLists.txt
tests/echo/: CMakeLists.txt
tests/echo/enc/: CMakeLists.txt  enc.c
tests/eeid_plugin/: test_helpers.c
tests/enclaveparam/: CMakeLists.txt
tests/file/: CMakeLists.txt
tests/file/enc/: CMakeLists.txt
tests/getenclave/: CMakeLists.txt
tests/getenclave/enc/: CMakeLists.txt
tests/hexdump/: CMakeLists.txt
tests/hostcalls/: CMakeLists.txt
tests/initializers/: CMakeLists.txt
tests/libc/: CMakeLists.txt
tests/libcxx/: CMakeLists.txt
tests/libcxxrt/: libcxxrt.edl
tests/libunwind/: CMakeLists.txt
tests/libunwind/enc/: CMakeLists.txt
tests/mbed/: CMakeLists.txt
tests/mbed/host/: CMakeLists.txt  host.c  ocalls.c
tests/mixed_c_cpp/: CMakeLists.txt
tests/ocall/: CMakeLists.txt
tests/ocall-create/: CMakeLists.txt
tests/oeedger8r/: CMakeLists.txt
tests/openssl/: CMakeLists.txt
tests/openssl/enc/: CMakeLists.txt  enc.c  oe_shim.c
tests/pingpong/: CMakeLists.txt
tests/pingpong-shared/: CMakeLists.txt
tests/print/: CMakeLists.txt
tests/props/: CMakeLists.txt
tests/props/enc/: CMakeLists.txt  props.c  sign.conf
tests/safecrt/: CMakeLists.txt
tests/sealKey/: CMakeLists.txt
tests/sealKey/enc/: CMakeLists.txt  enc.cpp
tests/sockets/enc/: CMakeLists.txt  enc.c
tests/stdc/: CMakeLists.txt
tests/stdcxx/: CMakeLists.txt
tests/switchless/: CMakeLists.txt  switchless.edl
tests/switchless/host/: CMakeLists.txt  host.cpp  switchless_u.cpp  switchless_u.h
tests/thread/: CMakeLists.txt
tests/thread/oethread_enc/: CMakeLists.txt  enc.cpp
tests/thread/pthread_enc/: CMakeLists.txt
tests/thread_local/: CMakeLists.txt
tests/threadcxx/: CMakeLists.txt
tests/threadcxx/enc/: CMakeLists.txt  enc.cpp
tests/tls_apis/: CMakeLists.txt
tests/tls_e2e/: CMakeLists.txt  tls_e2e.edl
tools/oesign/: main.c
windows/: CMakeLists.txt
windows/clangw/: README.md  clangw.cpp
(+89 files in other folders)
